--- a/debian.cfg
+++ b/debian.cfg
@@ -70,15 +70,19 @@ d-i partman-basicfilesystems/no_swap boolean false
 d-i partman-auto/expert_recipe_efi string efi :: \
     106 1 106 free \
     $iflabel{ gpt } method{ efi } format{ } . \
-    1 1 -1 $default_filesystem \
-    method{ format } format{ } use_filesystem{ } $default_filesystem{ } mountpoint{ / } .
+    25000 25000 25000 $default_filesystem \
+    method{ format } format{ } use_filesystem{ } $default_filesystem{ } mountpoint{ / } . \
+    1 1 -1 free \
+    method{ keep } .
 
 # shellcheck disable=SC1083,SC2086,SC2154
 d-i partman-auto/expert_recipe_bios string bios :: \
     1 1 1 free \
     $iflabel{ gpt } method{ biosgrub } . \
-    1 1 -1 $default_filesystem \
-    method{ format } format{ } use_filesystem{ } $default_filesystem{ } mountpoint{ / } .
+    25000 25000 25000 $default_filesystem \
+    method{ format } format{ } use_filesystem{ } $default_filesystem{ } mountpoint{ / } . \
+    1 1 -1 free \
+    method{ keep } .
 
 # B.4.8. 基本系统安装
 
