--- a/debian.cfg
+++ b/debian.cfg
@@ -72,7 +72,8 @@ d-i partman-auto/expert_recipe_efi string efi :: \
     $iflabel{ gpt } method{ efi } format{ } . \
     25000 25000 25000 $default_filesystem \
     method{ format } format{ } use_filesystem{ } $default_filesystem{ } mountpoint{ / } . \
-    method{ keep } .
+    1 1 -1 $default_filesystem \
+    method{ format } format{ } use_filesystem{ } $default_filesystem{ } mountpoint{ /bla } . \
 
 # shellcheck disable=SC1083,SC2086,SC2154
 d-i partman-auto/expert_recipe_bios string bios :: \
@@ -80,7 +81,8 @@ d-i partman-auto/expert_recipe_bios string bios :: \
     $iflabel{ gpt } method{ biosgrub } . \
     25000 25000 25000 $default_filesystem \
     method{ format } format{ } use_filesystem{ } $default_filesystem{ } mountpoint{ / } . \
-    method{ keep } .
+    1 1 -1 $default_filesystem \
+    method{ format } format{ } use_filesystem{ } $default_filesystem{ } mountpoint{ /bla } . \
 
 # B.4.8. 基本系统安装
 
